minor hmtl edits

--- a/portfolio.html
+++ b/portfolio.html
@@ -72,6 +72,8 @@
       <a href="https://gresendi.github.io/favoriteBand/" class="btn btn-primary">Arctic Monkeys</a>
     </div>
   </div>
+
+  <div class="card">
   <div class="card-body">
     <h5 class="card-title">Favorite Food</h5>
     <p class="card-text">Dedicated web site for one of my favorite foods.</p>
