--- a/contact.html
+++ b/contact.html
@@ -47,11 +47,28 @@
       </div>
     </div>
   </nav>
-  
-
-
+  <div class="container-sm">
+    <div class="row">
+      <div class="col sm12">
+        <h1>Contact Form</h1>
+      </div>
+    </div>
+    <div class="mb-3">
+      <label for="exampleFormControlInput1" class="form-label">Email address</label>
+      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+    </div>
+    <div class="mb-3">
+      <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+      <textarea class="form-control" id="exampleFormControlTextarea1" rows="10"></textarea>
+    </div>
+    <div class="row">
+      <div class="col sm12">
+        <input class="btn btn-primary" type="submit" value="Submit" >
+      </div>
+    </div>
   </div>
 
+  
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
