--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
       </div>
     </div>
   </nav>
-
+<div class="container-sm">
   <div class="card">
     
     <div class="card-body">
@@ -78,6 +78,7 @@
     <h5 class="card-title">Favorite Food</h5>
     <p class="card-text">Dedicated web site for one of my favorite foods.</p>
     <a href="https://gresendi.github.io/favoriteFood/" class="btn btn-primary">Enchiladas</a>
+  </div>
   </div>
   </div>
 
