--- a/contact.html
+++ b/contact.html
@@ -16,9 +16,16 @@
 
     .card-action a {
       font-size: 20px;
-
-
-
+    }
+    .container-fluid{
+      background-color: rgb(255, 214, 10);
+    } 
+    .container-sm{
+      background-color:rgb(0, 53, 102) ;
+      margin-top:3%;
+    }
+    body{
+      background-color: rgb(0, 53, 102);
     }
   </style>
 </head>
@@ -50,7 +57,7 @@
   <div class="container-sm">
     <div class="row">
       <div class="col sm12">
-        <h1>Contact Form</h1>
+        <h1 style="color: white" >Contact Form</h1>
       </div>
     </div>
     <div class="mb-3">
