--- a/portfolio.html
+++ b/portfolio.html
@@ -16,8 +16,16 @@
 
     .card-action a {
       font-size: 20px;
-
-
+    }
+    .container-fluid{
+      background-color: rgb(255, 214, 10);
+    } 
+    .container-sm{
+      background-color:rgb(0, 53, 102) ;
+      margin-top:3%;
+    }
+    body{
+      background-color: rgb(0, 53, 102);
 
     }
   </style>
