--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,9 @@
     body{
       background-color: rgb(0, 53, 102);
     }
+    textarea.form-control {
+    min-height: 300px; 
+    }
   </style>
 </head>
 
@@ -60,13 +63,15 @@
         <h1 style="color: white" >Contact Form</h1>
       </div>
     </div>
+    <div class="row" style= "padding: 20px 0px 224px 0px ">  
     <div class="mb-3">
       <label for="exampleFormControlInput1" class="form-label">Email address</label>
       <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
     </div>
     <div class="mb-3">
-      <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+      <label for="exampleFormControlTextarea1" class="form-label">Give me your feedback below</label>
       <textarea class="form-control" id="exampleFormControlTextarea1" rows="10"></textarea>
+    </div>
     </div>
     <div class="row">
       <div class="col sm12">
