--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
         <h1 style="color: white" >Contact Form</h1>
       </div>
     </div>
-    <div class="row" style= "padding: 20px 0px 224px 0px ">  
+    <div class="row" >  
     <div class="mb-3">
       <label for="exampleFormControlInput1" class="form-label">Email address</label>
       <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
