--- a/portfolio.html
+++ b/portfolio.html
@@ -58,14 +58,29 @@
           <li class="nav-item">
             <a class="nav-link" href="./portfolio.html">Portfolio</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="./contact.html">Contact</a>
-          </li>
+          </li> -->
 
         </ul>
       </div>
     </div>
   </nav>
+<div class="container-sm">
+  <div class="card">
+
+    <div class="card-body">
+      <h5 class="card-title">mePlant</h5>
+      <img src="./Assets/Images/mePlant.PNG" alt="portfolio">
+      <p class="card-text">This application helps a user to keep track of their plants and their water schedules, as well as provides a space for
+      users to share and post about plants.
+      </p>
+      <a href="https://meplant-app.herokuapp.com/" class="btn btn-primary">mePlant</a>
+    </div>
+  </div>
+
+
+
 <div class="container-sm">
   <div class="card">
   
